feature: duplicate module
